--- a/wp-content/themes/blog_busco/src/assets/stylus/components/button.styl
+++ b/wp-content/themes/blog_busco/src/assets/stylus/components/button.styl
@@ -6,14 +6,6 @@
 	&:active,
 	&:focus
 		outline 0
-	&-custom6
-		color $customwhite1
-		background-color $customred2
-		&:hover,
-		&:active,
-		&:focus
-			color darken($customwhite1, 10%)
-			background-color darken($customred2, 10%)
 	&-custom2
 		color $customblack3
 		background-color $customgreen1
@@ -48,12 +40,12 @@
 			background-color darken($customgreen2, 10%)
 	&-custom6
 		color $customwhite1
-		background-color $customred2
+		background-color $customblue1
 		&:hover,
 		&:active,
 		&:focus
 			color darken($customwhite1, 10%)
-			background-color darken($customred2, 10%)
+			background-color darken($customblue1, 10%)
 
 
 		
