--- a/wp-content/themes/blog_busco/src/assets/stylus/extends.styl
+++ b/wp-content/themes/blog_busco/src/assets/stylus/extends.styl
@@ -1,3 +1,13 @@
+.font-normal
+	font-family 'allerregular'
+	font-weight 400
+.font-light
+	font-family 'aller_lightregular'
+	font-weight 200
+.font-bold
+	font-family 'allerbold'
+	font-weight 700
+	
 .page-header
 	font-size 35px
 	text-align center
