--- a/wp-content/themes/blog_busco/src/assets/stylus/globals.styl
+++ b/wp-content/themes/blog_busco/src/assets/stylus/globals.styl
@@ -1,6 +1,27 @@
 *
 	-webkit-font-smoothing  antialiased
 	-moz-osx-font-smoothing grayscale
+
+// Font
+@font-face
+	font-family 'allerbold'
+	src url('../font/Aller/aller_bd-webfont.woff2') format('woff2'),
+	url('../font/Aller/aller_bd-webfont.woff') format('woff')
+	font-weight normal
+	font-style normal
+@font-face
+	font-family 'aller_lightregular'
+	src url('../font/Aller/aller_lt-webfont.woff2') format('woff2'),
+	url('../font/Aller/aller_lt-webfont.woff') format('woff')
+	font-weight normal
+	font-style normal
+@font-face
+	font-family 'allerregular'
+	src url('../font/Aller/aller_rg-webfont.woff2') format('woff2'),
+	url('../font/Aller/aller_rg-webfont.woff') format('woff')
+	font-weight normal
+	font-style normal
+    
 ul
 	margin  0
 	padding 0
@@ -9,7 +30,7 @@ ul
 		padding    0
 		list-style none
 a
-	font-weight 700
+	font-weight 400
 	&:hover,
 	&:focus,
 	&:active
@@ -27,7 +48,7 @@ p
 	padding 20px 0
 	
 body, html
-	font-family 'Open Sans', sans-serif
+	@extend .font-normal
 	font-size 16px
 	margin 0
 	padding 0
@@ -38,3 +59,6 @@ section
 	overflow hidden
 strong
 	font-weight 700
+
+object
+	display none
